--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18.2.0",
     "react-input-emoji": "^5.9.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
