--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-input-emoji": "^5.9.0",
     "react-router-dom": "^6.23.1",
+    "react-simple-image-viewer": "^1.2.2",
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
