--- a/client/package.json
+++ b/client/package.json
@@ -18,12 +18,12 @@
     "react-input-emoji": "^5.9.0",
     "react-router-dom": "^6.23.1",
     "react-simple-image-viewer": "^1.2.2",
+    "sass": "^1.77.8",
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
-    "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
