design,ui,toaster changes from last 2-3 days

--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-input-emoji": "^5.9.0",
     "react-router-dom": "^6.23.1",
     "react-simple-image-viewer": "^1.2.2",
+    "react-toastify": "^10.0.5",
     "sass": "^1.77.8",
     "socket.io-client": "^4.7.5"
   },
