--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18.2.0",
     "react-input-emoji": "^5.9.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.23.1",
     "react-simple-image-viewer": "^1.2.2",
     "react-toastify": "^10.0.5",
