--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.4.1",
     "node-cache": "^5.1.2",
+    "nodemailer": "^6.9.16",
     "validator": "^13.12.0"
   }
 }
