--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,8 @@
     "react-simple-image-viewer": "^1.2.2",
     "react-toastify": "^10.0.5",
     "sass": "^1.77.8",
-    "socket.io-client": "^4.7.5"
+    "socket.io-client": "^4.7.5",
+    "splitting": "^1.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.10.0",
